# minute-grad

./: README.md  blobs_demo.py  layer.py  main.py  optimiser.py  pyproject.toml  tensor.py  test.py  util.py
experiments/: ablation_test.py  activation.py  all_experiments.py  architecture_experiments.py  depth_test.py  dropout.py  dropout_3layers.py  hyperparameter.py  hyperparameter_experiments.py  train_util.py  width_test.py
experiments/experiments/results/: ablation_study.csv  batchbatch.csv  epochepoch.csv  lrlr.csv  normalisationnormalisation.csv  optimiseroptimiser.csv  wdwd.csv
experiments/experiments/results/activation_test/: test.csv
experiments/experiments/results/batchnorm_test/: test.csv
experiments/experiments/results/depth_test/: test.csv
experiments/experiments/results/dropout_3l_test/: test.csv
experiments/experiments/results/dropout_test/: test.csv
experiments/experiments/results/width_test/: test.csv
experiments/results/: batch.csv  epoch.csv  lr.csv  normalisation.csv  optimiser.csv  wd.csv
experiments/results/activation_test/: test.csv
experiments/results/batchnorm_test/: test.csv
experiments/results/depth_test/: test.csv
experiments/results/dropout_3l_test/: test.csv
experiments/results/dropout_test/: test.csv
experiments/results/width_test/: test.csv
nbs/: torch.ipynb
